--- a/debian/control
+++ b/debian/control
@@ -1,13 +1,14 @@
 Source: openmediavault-keyring
 Section: misc
 Maintainer: Volker Theile <volker.theile@openmediavault.org>
+Uploaders: Luis Antonio Garcia Gisbert <luisgg@gmail.com>
 Build-Depends: debhelper (>= 5), gnupg
 Standards-Version: 3.7.3
 
 Package: openmediavault-keyring
 Priority: important
 Architecture: all
-Depends: gnupg
+Depends: gnupg, aurex-keyring
 Description: GnuPG archive keys of the OpenMediaVault archive
  The OpenMediaVault project digitally signs its Release files. This package
  contains the archive keys used for that.
